@@ -2,7 +2,8 @@
  11.09.2016
   - improvement {math} misleading E_USER_WARNING messages when parameter value = null https://github.com/smarty-php/smarty/issues/288
   - improvement move often used code snippets into methods
-  
+  - performance Smarty::configLoad() did load unneeded template source object
+
  09.09.2016
   - bugfix/optimization {foreach} did not execute the {foreachelse} when iterating empty objects https://github.com/smarty-php/smarty/pull/287
   - bugfix {foreach} must keep the @properties when restoring a saved $item variable as the properties might be used outside {foreach} https://github.com/smarty-php/smarty/issues/267
